--- a/wiki/de/TechDraw_Balloon.html
+++ b/wiki/de/TechDraw_Balloon.html
@@ -55,7 +55,7 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Das Werkzeug <b>TechDraw Hinweisfeld</b> kann einer Zeichnung Hinweisfelder mit zugeh&ouml;riger Hinweislinie hinzuf&uuml;gen. (Voreingestellt ist ein kreisf&ouml;rmiges Hinweisfeld, das u.a. zur Kennzeichnung der Elemente einer St&uuml;ckliste dienen kann)
+<p>Das Werkzeug <b>TechDraw Hinweisfeld</b> kann einer Zeichnung Hinweisfelder mit zugeh&ouml;riger Hinweislinie hinzuf&uuml;gen. (Voreingestellt ist ein kreisf&ouml;rmiges Hinweisfeld, das u. a. zur Kennzeichnung der Elemente einer St&uuml;ckliste dienen kann)
 </p><p><span typeof="mw:File"><a href="../index.php?title=Techdraw_balloon.png&amp;filetimestamp=20190315112627&amp;.html" class="mw-file-description"><img src="../File/Techdraw_balloon.png" decoding="async" width="600" height="394" class="mw-file-element" data-file-width="983" data-file-height="646"></a></span>
 </p><p><span id="Usage"></span>
 </p>
@@ -172,12 +172,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111221505
+Cached time: 20260111221513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.112 seconds
-Real time usage: 0.295 seconds
+Real time usage: 0.212 seconds
 Preprocessor visited node count: 810/1000000
 Post&#8208;expand include size: 31143/2097152 bytes
 Template argument size: 11927/2097152 bytes
@@ -188,19 +188,19 @@ Unstrip post&#8208;expand size: 2314/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.356      1 -total
- 23.93%   10.136      1 Template:TechDraw_Tools_navi/de
- 15.80%    6.691     12 Template:PropertyData/de
- 15.54%    6.580      5 Template:PropertyView/de
- 14.88%    6.304      2 Template:Navigation_menu_2
- 11.63%    4.927     17 Template:Variable
-  9.01%    3.818      1 Template:Code
-  7.29%    3.089      1 Template:GuiCommand/de
-  7.04%    2.981      1 Template:Userdocnavi/de
-  6.91%    2.928      1 Template:MenuCommand
+100.00%   48.053      1 -total
+ 22.55%   10.838     12 Template:PropertyData/de
+ 19.96%    9.592      1 Template:TechDraw_Tools_navi/de
+ 12.38%    5.948     17 Template:Variable
+ 11.44%    5.497      2 Template:Navigation_menu_2
+  9.70%    4.660      1 Template:Userdocnavi/de
+  8.81%    4.235      1 Template:GuiCommand/de
+  8.52%    4.095      5 Template:PropertyView/de
+  7.09%    3.408      1 Template:Code
+  7.07%    3.396      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111221505 and revision id 1736612. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111221513 and revision id 1736615. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
