--- a/wiki/de/TechDraw_Balloon.html
+++ b/wiki/de/TechDraw_Balloon.html
@@ -60,19 +60,17 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Eins der folgenden ausw&auml;hlen:
-<ul><li>Eine Ansicht (auf dem Blatt oder in der <a href="../de/Tree_view.html" class="mw-redirect" title="Tree view/de">Baumansicht</a>).</li>
+<ul><li>Eine Ansicht (auf dem Blatt oder in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a>).</li>
 <li>Einen Knoten in einer Ansicht.</li>
 <li>Eine Kante in einer Ansicht.</li>
 <li>Einen abgeschlossenen Bereich in einer Ansicht.</li></ul></li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Balloon.svg&amp;filetimestamp=20241126214042&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hinweisfeld einf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Anmerkungen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Balloon.svg&amp;filetimestamp=20241126214042&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hinweisfeld einf&uuml;gen</b> ausw&auml;hlen.</li></ul></li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Balloon.svg&amp;filetimestamp=20241126214042&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hinweisfeld</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Beschriftungen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Balloon.svg&amp;filetimestamp=20241126214042&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hinweisfeld</b> ausw&auml;hlen.</li></ul></li>
 <li>Wenn eine Ansicht oder ein Bereich ausgew&auml;hlt wurde:
 <ol><li>Der Mauszeiger wird mit dem Symbol dieses Werkzeuges angezeigt.</li>
-<li>Einen Punkt auf dem Blatt angeklicken, um den Ursprung der Hinweisfeldes (Startpunkt der Hinweislinie) festzulegen.</li></ol></li></ol>
-</div>
+<li>Einen Punkt auf dem Blatt anklicken, um den Ursprung der Hinweisfeldes (Startpunkt der Hinweislinie) festzulegen.</li></ol></li></ol>
 <p>Um ein Hinweisfeld zu verschieben, positioniert man den Mauszeiger &uuml;ber seiner Mitte, dr&uuml;ckt und h&auml;lt die linke Maustaste und zieht die Maus.
 </p>
 <div class="mw-translate-fuzzy">
@@ -172,15 +170,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111221513
+Cached time: 20260111221617
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.212 seconds
-Preprocessor visited node count: 810/1000000
-Post&#8208;expand include size: 31143/2097152 bytes
-Template argument size: 11927/2097152 bytes
+CPU time usage: 0.132 seconds
+Real time usage: 0.284 seconds
+Preprocessor visited node count: 809/1000000
+Post&#8208;expand include size: 31126/2097152 bytes
+Template argument size: 11910/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -188,19 +186,19 @@ Unstrip post&#8208;expand size: 2314/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.053      1 -total
- 22.55%   10.838     12 Template:PropertyData/de
- 19.96%    9.592      1 Template:TechDraw_Tools_navi/de
- 12.38%    5.948     17 Template:Variable
- 11.44%    5.497      2 Template:Navigation_menu_2
-  9.70%    4.660      1 Template:Userdocnavi/de
-  8.81%    4.235      1 Template:GuiCommand/de
-  8.52%    4.095      5 Template:PropertyView/de
-  7.09%    3.408      1 Template:Code
-  7.07%    3.396      1 Template:Button
+100.00%   33.866      1 -total
+ 27.27%    9.234      1 Template:TechDraw_Tools_navi/de
+ 14.58%    4.937     12 Template:PropertyData/de
+ 13.90%    4.709      2 Template:Navigation_menu_2
+ 13.47%    4.563      5 Template:PropertyView/de
+ 11.39%    3.859     17 Template:Variable
+ 10.15%    3.438      2 Template:Docnav/de
+  7.77%    2.630      1 Template:GuiCommand/de
+  7.12%    2.412      1 Template:Code
+  6.06%    2.052      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111221513 and revision id 1736615. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111221617 and revision id 1736617. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
