--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -61,7 +61,7 @@ App::PropertyVector
 </p>
 <h2><span id="Z.C3.A1kladn.C3.AD_vlastnosti"></span><span class="mw-headline" id="Z&aacute;kladn&iacute;_vlastnosti">Z&aacute;kladn&iacute; vlastnosti</span></h2>
 <p>R&#367;zn&eacute; objekty mohou m&iacute;t r&#367;zn&eacute; vlastnosti. Mnoho objekt&#367; v&scaron;ak m&aacute; stejn&eacute; vlastnosti, proto&#382;e jsou odvozeny ze stejn&eacute; vnit&#345;n&iacute; t&#345;&iacute;dy.
-</p><p>Most geometrical objects that can be created and displayed in the <a href="../3D_View.html" title="3D View">3D View</a> are derived from a <code>Part::Feature</code>. See <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> for the basic properties these objects have.
+</p><p>V&#283;t&scaron;ina geometrick&yacute;ch objekt&#367;, kter&eacute; lze vytvo&#345;it a zobrazit v <a href="../index.php?title=3D_View/cs&amp;action=edit&amp;redlink=1.html" class="new" title="3D View/cs (page does not exist)">3D zobrazen&iacute;</a>, je odvozena od <code>Part::Feature</code>. Z&aacute;kladn&iacute; vlastnosti t&#283;chto objekt&#367; najdete v sekci <a href="../index.php?title=Part_Feature/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Part Feature/cs (page does not exist)">Vlastnosti d&iacute;lu</a>.
 </p><p>For 2D geometry, most objects are derived from a <code>Part::Part2DObject</code> (itself derived from a <code>Part::Feature</code>) which is the base of <a href="../Sketch.html" title="Sketch">Sketches</a>, and most <a href="../Draft_Workbench.html" title="Draft Workbench">Draft objects</a>. See <a href="../Part_Part2DObject.html" title="Part Part2DObject">Part Part2DObject</a> for the basic properties these objects have.
 </p>
 <h2><span class="mw-headline" id="Context_menu">Context menu</span></h2>
@@ -169,12 +169,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111221505
+Cached time: 20260111221733
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.327 seconds
+CPU time usage: 0.125 seconds
+Real time usage: 0.194 seconds
 Preprocessor visited node count: 703/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
@@ -185,19 +185,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  127.951      1 -total
- 27.77%   35.530      1 Template:PropertyData
- 15.42%   19.724      1 Template:Variable
- 13.73%   17.569      1 Template:Std_Base_navi/cs
-  8.97%   11.474      1 Template:Interface_navi/cs
-  6.75%    8.640      6 Template:Incode
-  6.73%    8.613      1 Template:Userdocnavi/cs
-  6.63%    8.484      3 Template:Version
-  6.41%    8.198      3 Template:Navigation_menu_2
-  5.46%    6.982      2 Template:Docnav
+100.00%   58.030      1 -total
+ 17.79%   10.321      1 Template:Std_Base_navi/cs
+ 14.05%    8.151      1 Template:Interface_navi/cs
+ 13.93%    8.086      3 Template:Navigation_menu_2
+ 13.43%    7.795      1 Template:Userdocnavi/cs
+ 12.86%    7.460      1 Template:TRUE
+  7.45%    4.325      1 Template:PropertyData
+  5.04%    2.924     26 Template:MenuCommand
+  4.31%    2.501      2 Template:Value
+  4.14%    2.403      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111221505 and revision id 1736613. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111221733 and revision id 1736621. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
