--- a/wiki/de/TechDraw_Balloon.html
+++ b/wiki/de/TechDraw_Balloon.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Balloon/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Balloon&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_Balloon.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Balloon (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Bulle (73% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Pallinatura (73% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -114,11 +114,8 @@
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
 <p>Siehe auch: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Autogenerierte API-Dokumentation</a> und <a href="../de/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/de">Grundlagen der Skripterstellung in FreeCAD</a>.
+</p><p>Das Werkzeug Hinweisfeld kann in <a href="../de/Macros.html" title="Macros/de">Makros</a> und &uuml;ber die <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> mit den folgenden Funktionen verwendet werden:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Das Ballon-Werkzeug kann in <a href="../de/Macros.html" title="Macros/de">Makros</a> und von der <a href="../de/Python.html" title="Python/de">Python</a>-Konsole aus mit den folgenden Funktionen benutzt werden:
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">bal1</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s1">'TechDraw::DrawViewBalloon'</span><span class="p">,</span><span class="s1">'Balloon'</span><span class="p">)</span>
 <span class="n">rc</span> <span class="o">=</span> <span class="n">page</span><span class="o">.</span><span class="n">addView</span><span class="p">(</span><span class="n">bal1</span><span class="p">)</span>
 </pre></div>
@@ -166,35 +163,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111221656
+Cached time: 20260111221836
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.194 seconds
-Preprocessor visited node count: 808/1000000
+CPU time usage: 0.118 seconds
+Real time usage: 0.180 seconds
+Preprocessor visited node count: 807/1000000
 Post&#8208;expand include size: 31126/2097152 bytes
 Template argument size: 11910/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2314/5000000 bytes
+Unstrip post&#8208;expand size: 2318/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.624      1 -total
- 22.21%    9.469     12 Template:PropertyData/de
- 18.66%    7.954      1 Template:TechDraw_Tools_navi/de
- 14.57%    6.209     17 Template:Variable
- 13.18%    5.616      5 Template:PropertyView/de
-  9.87%    4.208      2 Template:Navigation_menu_2
-  9.76%    4.158      1 Template:Code
-  6.87%    2.927      1 Template:Userdocnavi/de
-  6.75%    2.877      1 Template:Button
-  6.54%    2.786      2 Template:Docnav/de
+100.00%   39.003      1 -total
+ 27.27%   10.637      1 Template:TechDraw_Tools_navi/de
+ 13.96%    5.445     12 Template:PropertyData/de
+ 13.69%    5.339      2 Template:Navigation_menu_2
+ 12.95%    5.051      5 Template:PropertyView/de
+ 12.13%    4.731      2 Template:Docnav/de
+  9.67%    3.772      1 Template:GuiCommand/de
+  9.07%    3.539     17 Template:Variable
+  6.93%    2.704      1 Template:Userdocnavi/de
+  6.01%    2.344      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111221655 and revision id 1736619. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111221836 and revision id 1736623. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
