--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Package Metadata/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Package+Metadata&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Package_Metadata.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="M&eacute;tadonn&eacute;es du package (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (20% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -175,15 +175,13 @@
 <h4><span class="mw-headline" id="Attributes">Attributes</span></h4>
 <p>Alle Abh&auml;ngigkeiten und Beziehungen k&ouml;nnen ihre Anwendbarkeit auf bestimmte Versionen beschr&auml;nken. F&uuml;r jeden Vergleichsoperator kann ein Attribut verwendet werden. Zwei dieser Attribute k&ouml;nnen zusammen verwendet werden, um einen Versionsbereich zu beschreiben.
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>version_lt="VERSION" (optional): Die Abh&auml;ngigkeit vom Paket ist auf Versionen beschr&auml;nkt, die kleiner als die angegebene Versionsnummer sind.</li>
 <li>version_lte="VERSION" (optional): Die Abh&auml;ngigkeit vom Paket ist auf Versionen beschr&auml;nkt, die kleiner oder gleich der angegebenen Versionsnummer sind.</li>
 <li>version_eq="VERSION" (optional): Die Abh&auml;ngigkeit vom Paket ist auf eine Version beschr&auml;nkt, die gleich der angegebenen Versionsnummer ist.</li>
 <li>version_gte="VERSION" (optional): Die Abh&auml;ngigkeit vom Paket ist auf Versionen beschr&auml;nkt, die gr&ouml;&szlig;er oder gleich der angegebenen Versionsnummer sind.</li>
 <li>version_gt="VERSION" (optional): Die Abh&auml;ngigkeit vom Paket ist auf Versionen beschr&auml;nkt, die gr&ouml;&szlig;er als die angegebene Versionsnummer sind.</li>
 <li>optional="true|false": Wenn "optional" auf "true" gesetzt ist, wird die Abh&auml;ngigkeit als optional behandelt, wenn das Addon mit dem Addon-Manager installiert wird. Im Allgemeinen bedeutet dies, dass eine fehlgeschlagene Installation der Abh&auml;ngigkeit die Installation des Addons nicht verhindert und der Benutzer m&ouml;glicherweise gefragt wird, ob er es installieren m&ouml;chte. Versionen von FreeCAD vor 0.21 erkennen dieses Attribut nicht und ignorieren es.</li>
-<li>type="automatic|addon|internal|python": Optional, Standardwert ist "automatic". Gibt an, worauf sich diese Abh&auml;ngigkeitsangabe bezieht. "addon" steht f&uuml;r externe Addons, "internal" f&uuml;r interne Arbeitsbereiche (z. B. "arch", "sketcher" usw.) und "python" f&uuml;r eine Python-Paketabh&auml;ngigkeit. Versionen von FreeCAD vor 0.21 verwenden dieses Attribut nicht, und es wird immer "automatic" angenommen.</li></ul>
-</div>
+<li>type="automatic|addon|internal|python": Optional, Standardwert ist "automatic". Gibt an, worauf sich diese Abh&auml;ngigkeitsangabe bezieht. "addon" steht f&uuml;r externe Addons, "internal" f&uuml;r interne Arbeitsbereiche und "python" f&uuml;r eine Python-Paketabh&auml;ngigkeit. Versionen von FreeCAD vor 0.21 verwenden dieses Attribut nicht, und es wird immer "automatic" angenommen.</li></ul>
 <p><span id="Type:_internal"></span>
 </p>
 <h5><span class="mw-headline" id="Typ:_intern">Typ: intern</span></h5>
@@ -377,34 +375,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111223813
+Cached time: 20260111223904
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.072 seconds
-Preprocessor visited node count: 524/1000000
+CPU time usage: 0.058 seconds
+Real time usage: 0.088 seconds
+Preprocessor visited node count: 523/1000000
 Post&#8208;expand include size: 7649/2097152 bytes
 Template argument size: 2699/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8142/5000000 bytes
+Unstrip post&#8208;expand size: 8146/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.356      1 -total
- 30.95%    5.682      1 Template:Powerdocnavi/de
- 13.94%    2.558      1 Template:MenuCommand
- 11.87%    2.179     37 Template:Incode
-  9.49%    1.742      1 Template:Navigation_menu_2
-  8.45%    1.551      1 Template:Code
-  8.26%    1.516      3 Template:Version/de
-  6.86%    1.259      2 Template:VersionNote/de
-  5.60%    1.029      1 Template:TOCright
+100.00%   24.084      1 -total
+ 31.54%    7.595      1 Template:Powerdocnavi/de
+ 14.69%    3.538      1 Template:Code
+ 12.09%    2.911      2 Template:VersionNote/de
+ 10.67%    2.569     37 Template:Incode
+  9.89%    2.381      1 Template:Navigation_menu_2
+  7.63%    1.838      1 Template:TOCright
+  7.37%    1.775      3 Template:Version/de
+  5.07%    1.221      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260111223813 and revision id 1736675. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260111223903 and revision id 1736681. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
