--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -14,7 +14,7 @@
 <li><a href="../ro/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Ateliere (12% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../fi/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Workbenches (2% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Workbenches (5% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Workbenches (2% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1080; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Workbenches (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -33,11 +33,8 @@
 <p>FreeCAD, stejn&#283; jako mnoho modern&iacute;ch n&aacute;vrhov&yacute;ch aplikac&iacute;, nap&#345;&iacute;klad <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revit</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CATIA">CATIA</a>, je zalo&#382;en na konceptu <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Workbench">Pracovn&iacute;ch ploch</a>. Pracovn&iacute; plochu lze pova&#382;ovat za sadu n&aacute;stroj&#367; speci&aacute;ln&#283; seskupen&yacute;ch pro ur&#269;it&yacute; &uacute;kol. V tradi&#269;n&iacute; truhl&aacute;&#345;sk&eacute; d&iacute;ln&#283; byste m&#283;li pracovn&iacute; st&#367;l pro osobu, kter&aacute; pracuje se d&#345;evem, dal&scaron;&iacute; pro osobu, kter&aacute; pracuje s kovov&yacute;mi d&iacute;ly a mo&#382;n&aacute; t&#345;et&iacute; pro osobu, kter&aacute; v&scaron;echny d&iacute;ly montuje dohromady.
 </p><p>Ve FreeCADu je pou&#382;it &uacute;pln&#283; stejn&yacute; koncept. N&aacute;stroje jsou p&#345;i&#345;azov&aacute;ny do pracovn&iacute;ch ploch podle &uacute;kol&#367;, ke kter&yacute;m, jsou tyto plochy ur&#269;eny.
 </p><p>P&#345;i p&#345;epnut&iacute; z jedn&eacute; pracovn&iacute; plochy na druhou se zm&#283;n&iacute; n&aacute;stroje dostupn&eacute; v rozhran&iacute;. Panely n&aacute;stroj&#367;, panely p&#345;&iacute;kaz&#367; a p&#345;&iacute;padn&#283; dal&scaron;&iacute; &#269;&aacute;sti rozhran&iacute; se p&#345;epnou na novou pracovn&iacute; plochu, ale obsah sc&eacute;ny se nezm&#283;n&iacute;. M&#367;&#382;ete nap&#345;&iacute;klad za&#269;&iacute;t kreslit 2D tvary v pracovn&iacute; plo&scaron;e Draft a pot&eacute; na nich d&aacute;le pracovat v pracovn&iacute; plo&scaron;e Part.
+</p><p>V&scaron;imn&#283;te si, &#382;e n&#283;kdy se pracovn&iacute; plocha ozna&#269;uje jako <i>Modul</i>. Pracovn&iacute; plochy a moduly jsou v&scaron;ak odli&scaron;n&eacute; entity. Modul je jak&eacute;koli roz&scaron;&iacute;&#345;en&iacute; FreeCADu, zat&iacute;mco pracovn&iacute; plocha je speci&aacute;ln&iacute; typ modulu s konfigurac&iacute; grafick&eacute;ho u&#382;ivatelsk&eacute;ho rozhran&iacute; (panely n&aacute;stroj&#367; a menu).
 </p>
-<div class="mw-translate-fuzzy">
-<p>V&scaron;imn&#283;te si, &#382;e n&#283;kdy je pracovn&iacute; plocha odkazov&aacute;na jako "Modul". Nicm&eacute;n&#283; Pracovn&iacute; plochy a Moduly jsou odli&scaron;n&eacute; objekty. Modul je jak&eacute;koliv roz&scaron;&iacute;&#345;en&iacute; FreeCADu, zat&iacute;mco Pracovn&iacute; plocha je speci&aacute;ln&iacute; GUI (to co vid&iacute;te na obrazovce) configurace, kter&aacute; seskupuje vybran&eacute; pruhy n&aacute;stroj&#367; a menu. Obvykle ka&#382;d&yacute; modul obsahuje svou vlastn&iacute; pracovn&iacute; plochu, co&#382; je d&#367;vod ob&#269;asn&eacute; z&aacute;m&#283;ny pojm&#367; Modul a Pracovn&iacute; plocha.
-</p>
-</div>
 <meta property="mw:PageProp/toc">
 <h2><span class="mw-headline" id="Built-in_workbenches">Built-in workbenches</span></h2>
 <h3><span class="mw-headline" id="Current">Current</span></h3>
@@ -104,13 +101,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224339
+Cached time: 20260111224511
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.140 seconds
-Real time usage: 0.211 seconds
-Preprocessor visited node count: 285/1000000
+CPU time usage: 0.111 seconds
+Real time usage: 0.233 seconds
+Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
 Highest expansion depth: 5/100
@@ -120,18 +117,18 @@ Unstrip post&#8208;expand size: 4246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.964      1 -total
- 44.17%   10.144      1 Template:Userdocnavi/cs
- 19.28%    4.428      1 Template:Navigation_menu_2
- 15.98%    3.669      2 Template:Docnav
- 10.39%    2.387      3 Template:Version
-  8.38%    1.925      5 Template:Incode
-  7.59%    1.744      1 Template:Button
-  5.25%    1.205      2 Template:VersionMinus
-  4.05%    0.931      1 Template:MenuCommand
+100.00%   22.349      1 -total
+ 34.44%    7.696      1 Template:Userdocnavi/cs
+ 18.02%    4.028      2 Template:Docnav
+ 10.67%    2.385      2 Template:VersionMinus
+ 10.22%    2.284      1 Template:Navigation_menu_2
+  8.94%    1.998      3 Template:Version
+  8.84%    1.975      1 Template:MenuCommand
+  8.07%    1.803      1 Template:Button
+  6.12%    1.368      5 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224338 and revision id 1736691. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224510 and revision id 1736701. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
