--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -296,14 +296,11 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_10:_Zentrum_von:">Abschnitt 10: Zentrum von:</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Center_of_00.png&amp;filetimestamp=20221021104033&amp;.html" class="mw-file-description" title="FCInfo Zentrum von ..."><img alt="FCInfo Zentrum von ..." src="../File/Macro_FCInfo_Center_of_00.png" decoding="async" width="398" height="143" class="mw-file-element" data-file-width="398" data-file-height="143"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>Mittelpunkt der Form und seine Koordinaten XYZ</li>
 <li>Massenmittelpunkt und seine Koordinaten XYZ</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">buttons</span> erstellt auf Punkt, Achse, Ebene, kopiert Vektorachsenform <b>FreeCAD.Vector(-24.0, 240.0, 7.0)</b> <i>(siehe Sektor 13)</i></li></ul>
 <p><i>(um die Box zu verstecken, die Variable <b>switch_setVisible_GBox_010_Center_Mass</b> auf <code>false</code> setzen)</i>
-</p>
-</div>
-<p><span id="Sector_11:_Inertia"></span>
+</p><p><span id="Sector_11:_Inertia"></span>
 </p>
 <h3><span id="Abschnitt_11:_Tr.C3.A4gheit"></span><span class="mw-headline" id="Abschnitt_11:_Tr&auml;gheit">Abschnitt 11: Tr&auml;gheit</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Inertia_00.png&amp;filetimestamp=20221021103928&amp;.html" class="mw-file-description" title="FCInfo Tr&auml;gheit"><img alt="FCInfo Tr&auml;gheit" src="../File/Macro_FCInfo_Inertia_00.png" decoding="async" width="398" height="428" class="mw-file-element" data-file-width="398" data-file-height="428"></a></span>
@@ -725,13 +722,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210028
+Cached time: 20260111224542
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.216 seconds
-Real time usage: 0.330 seconds
-Preprocessor visited node count: 1543/1000000
+CPU time usage: 0.201 seconds
+Real time usage: 0.295 seconds
+Preprocessor visited node count: 1542/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5252/2097152 bytes
 Highest expansion depth: 6/100
@@ -741,19 +738,19 @@ Unstrip post&#8208;expand size: 15822/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  103.074      1 -total
-  8.23%    8.482     10 Template:CheckBox
-  7.40%    7.629     44 Template:LineEdit
-  5.33%    5.498      8 Template:RadioButton
-  5.16%    5.322      4 Template:ComboBox
-  4.96%    5.110      1 Template:Macro/de
-  4.52%    4.655      1 Template:CodeDownload
-  3.97%    4.090     10 Template:Code
-  3.40%    3.506     25 Template:Button
-  3.29%    3.387      3 Template:Incode
+100.00%   92.352      1 -total
+  9.01%    8.318     10 Template:Code
+  5.99%    5.535     10 Template:CheckBox
+  5.65%    5.214     44 Template:LineEdit
+  5.62%    5.190      1 Template:Macro/de
+  5.32%    4.915      8 Template:RadioButton
+  4.89%    4.519      1 Template:CodeDownload
+  4.38%    4.047     19 Template:True
+  4.00%    3.692      1 Template:Codeextralink
+  3.31%    3.054     25 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260111210028 and revision id 1736258. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260111224542 and revision id 1736703. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
